# Alice-C-Framework

./: .travis.yml  Alice.cpp  CMakeLists.txt  Configuration.hpp  Database.hpp  LICENSE.txt  OS.hpp  README.md
.github/: FUNDING.yml
Basic/: Epsilon.hpp  ExceptionType.hpp  Inline.hpp  Likely.hpp  NoDefault.hpp  Types.hpp  VectorTypes.hpp
Collections/Generic/: List.hpp
Concepts/: AddConst.hpp  AddConstVolatile.hpp  AddLvalueReference.hpp  AddPointer.hpp  AddRvalueReference.hpp  AddVolatile.hpp  Conditional.hpp  DeclaredValue.hpp  EnableIf.hpp  IsArray.hpp  IsClass.hpp  IsConst.hpp  IsConvertible.hpp  IsEnum.hpp  IsFloatingPoint.hpp  IsFunction.hpp  IsInteger.hpp  IsLvalueReference.hpp  IsNullPtrType.hpp  IsPointer.hpp  IsRvalueReference.hpp  IsSame.hpp  IsUnion.hpp  IsVoid.hpp  IsVolatile.hpp  RemoveConst.hpp  RemoveReferences.hpp  RemoveVolatile.hpp
Core/: App.hpp  AppContext.hpp  Array.hpp  BitConverter.hpp  DefaultDelete.hpp  Environment.hpp  Exception.hpp  Forward.hpp  Lazy.hpp  Limits.hpp  MainWindow.hpp  UniquePtr.hpp
Docs/: CMakeLists.txt  mainpage.md
Engine/: Behaviour.hpp
Examples/: CMakeLists.txt
Examples/Basic/: Epsilon.cpp  Inline.cpp  Likely.cpp  NoDefault.cpp
Examples/Collections/Generic/: List.cpp
Examples/Concepts/: AddConst.cpp  AddConstVolatile.cpp  AddLvalueReference.cpp  AddPointer.cpp  AddRvalueReference.cpp  AddVolatile.cpp  Conditional.cpp  DeclaredValue.cpp  EnableIf.cpp  IsArray.cpp  IsClass.cpp  IsConst.cpp  IsConvertible.cpp  IsEnum.cpp  IsFloatingPoint.cpp  IsFunction.cpp  IsInteger.cpp  IsLvalueReference.cpp  IsNullPtrType.cpp  IsPointer.cpp  IsRvalueReference.cpp  IsSame.cpp  IsUnion.cpp  IsVoid.cpp  IsVolatile.cpp  RemoveConst.cpp  RemoveReferences.cpp  RemoveVolatile.cpp
Examples/Core/: AppContext.cpp  Array.cpp  DefaultDelete.cpp  Environment.cpp  Exception.cpp  Forward.cpp  Lazy.cpp  Limits.cpp
Examples/IO/: File.cpp
Examples/IO/Decoder/: PNG.cpp
Examples/Math/Algebra/: Ceil.cpp  Floor.cpp  Round.cpp  SquareRoot.cpp
Examples/Math/Arithmetic/: AbsoluteValue.cpp  Maximum.cpp  Minimum.cpp
Examples/Networking/: CMakeLists.txt  Client.cpp  Server.cpp
Examples/System/: CpuInfo.cpp
IO/: File.hpp
IO/Decoder/: PNG.hpp
Math/Algebra/: Ceil.hpp  Floor.hpp  Round.hpp  SquareRoot.hpp
Math/Arithmetic/: AbsoluteValue.hpp  Maximum.hpp  Minimum.hpp
Memory/: UniquePtr.hpp
Networking/: Socket.hpp
System/: CacheType.hpp  CpuCacheLevel.hpp  CpuISA.hpp  CpuInfo.hpp  CpuType.hpp
Tests/: BasicTest.cpp  CMakeLists.txt  CollectionsTest.cpp  ConceptsTest.cpp  CoreTest.cpp  IOTest.cpp  MathTest.cpp  MemoryTest.hpp  SystemTest.cpp  Test.hpp
UI/: Window.hpp
