add_executable(BasicTest BasicTest.cpp)
add_executable(CollectionsTest CollectionsTest.cpp)
add_executable(ConceptsTest ConceptsTest.cpp)
add_executable(CoreTest CoreTest.cpp)
add_executable(IOTest IOTest.cpp)
add_executable(MathTest MathTest.cpp)
add_executable(SystemTest SystemTest.cpp)

target_include_directories(BasicTest PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(CollectionsTest PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(ConceptsTest PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(CoreTest PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(IOTest PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(MathTest PUBLIC ${PROJECT_SOURCE_DIR})
target_include_directories(SystemTest PUBLIC ${PROJECT_SOURCE_DIR})

add_test(NAME AliceBasic COMMAND BasicTest)
add_test(NAME AliceCollections COMMAND CollectionsTest)
add_test(NAME AliceConcepts COMMAND ConceptsTest)
add_test(NAME AliceCore COMMAND CoreTest)
add_test(NAME AliceIO COMMAND IOTest)
add_test(NAME AliceMath COMMAND MathTest)
add_test(NAME AliceSystem COMMAND SystemTest)